# cloth_assist_interface

./: CMakeLists.txt  LICENSE  LICENSE.md  README.md  package.xml
files/: parseKinect.m
files/BaxterCalibration/: baxterArmMotion1  baxterArmMotion2
files/Calibration/: absoluteOrientationSVD.m  computeProjection.m  parseBaxter.m  parseMocap.m
files/KinectCalibration/: Array.xml
files/Matlab/: GLI.m  GLIen.m  K1  K1S1P1T1VFH  absoluteOrientationSVD.m  analyzeClusters.m  analyzeClustersMain.m  clusters101000  clusters20100  clusters301000  clusters401000  clusters50100  computeMocap.m  computePosture.m  computeProjection.m  ellipseFit.m  inspectMocap.m  inspectMocap2.m  parseBaxter.m  parseCloud.m  parseClusters.m  parseHist.m  parseKinect.m  parseKinectTracks.m  parseMocap.m  parsePosture.m  plotMarker.m  plotPosture.m  topologyCompute.m
files/RQt/: TopCoordPlotter.perspective  cloth.rviz
include/: processor.h  recorder.h  tracker.h
launch/: marker.launch  markerArray.launch  syncPlay.launch  syncRecord.launch
msg/: TopCoord.msg
nodes/: baxter_mocap_sync.cpp  cloth_recorder.cpp  cloth_tracker.cpp  feature_extract.cpp  kinect_extract.cpp  kinect_mocap_sync.cpp  kinect_processor.cpp  kinect_recorder.cpp  kinect_synchronizer.cpp  marker_recorder.cpp  sync.cpp  synchronizer.cpp
scripts/: cloth_estimate.py  computeKMeans.py  compute_kmeans.py  kinect_calib.py  play.py  record.py  recorder.py  teach.py
src/: processor.cpp  recorder.cpp  tracker.cpp
